Fixed the html structure of the page

--- a/index.html
+++ b/index.html
@@ -1,21 +1,30 @@
-<div id="main">
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <title> Lionel Messi Tribute </title>
-  <h1 id="title">Lionel Messi</h1>
-  <div>The GOD of Football</div>
-  <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
-  </Head>
-  <div id="img-div">
-    <img id="image" src="Messi.jpg">
-    <div id="img-caption">
-      Quite possibly one of the best, if not THE best football players of ALL TIME.
-    </div>
-  </div>
+      <!--Adding proper meta tags-->
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title id="title"> Lionel Messi Tribute </title>
+      <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
+  </head>
+  <body>
+    <main id="main"> <!--Moving the Main div container to the body, used main instead of a div-->
+        <h1>Lionel Messi</h1> <!--Moving H1 and following content to the body isnteaed of the head-->
+        <div>The GOD of Football</div>
+        <figure>
+          <div id="img-div">
+            <img id="image" src="Messi.jpg" alt="The back of Messi with is fingers pointing to the heaves">
+          <figcaption id="img-caption">
+            Quite possibly one of the best, if not THE best football players of ALL TIME.
+          </figcaption>
+          </div>
+        </figure>
   <div id="tribute-info">
       
       <em>***It would take me an incredible amount of time to list ALL his achievements, especially considering
           he has not yet retired but maybe someday this page will contain a more complete list.***
-        </em><br /><br />
+        </em><br />
 
     <ul>
         <h3 id="headline">Here's a time line of Messi's life</h3>
@@ -48,4 +57,6 @@
     </blockquote>
     <h3>If you have the time, you should read more about this incrediblly gifted player here <a id="tribute-link" href="https://en.wikipedia.org/wiki/Lionel_Messi" target="_blank">Wikipedia entry</a>.</h3>
   </div>
-</div>
+</main>
+</body>
+</html>
